test/arrays/return/returnArbitraryBadEltType.good
returnArbitraryBadEltType.chpl:1: In function 'inc':
returnArbitraryBadEltType.chpl:2: error: array element type mismatch in return from real(64) to int(64)
  returnArbitraryBadEltType.chpl:7: called as inc(X: [domain(1,int(64),false)] real(64))
